--- a/style.css
+++ b/style.css
@@ -1,161 +1,341 @@
-@import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Fredoka+One&family=Merienda:wght@300;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Aboreto&family=Fredoka+One&family=Merienda:wght@300;600&display=swap$family=Lato");
 
-*{box-sizing: border-box;
-padding: 0;
-margin: 0;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-.header{
-    font-family: 'Merienda', cursive;
-    font-weight: 700;
-    height: 20vh;
-    width: 100vw;
-    background-position:center center;
-    background-size: cover;
-    background-image: url(./images/header.jpg);
-    text-transform: capitalize;
+.header {
+  font-family: "Merienda", cursive;
+  font-weight: 700;
+  height: 20vh;
+  width: 100vw;
+  background-position: center center;
+  background-size: cover;
+  background-image: url(./images/header.jpg);
+  text-transform: capitalize;
 }
 
-h1{
-    color: rgb(102, 10, 10);
-    text-align: center;
-    line-height: 20vh;
-    font-weight: 700;
-    font-size: 50px;
+h1 {
+  color: rgb(102, 10, 10);
+  text-align: center;
+  line-height: 20vh;
+  font-weight: 700;
+  font-size: 50px;
 }
 
-h2, h3 {
-    text-align: center;
-    font-family: 'Aboreto', cursive;
-    color: rgb(102, 10, 10);
-    
+h2,
+h3 {
+  text-align: center;
+  font-family: "Aboreto", cursive;
+  color: rgb(102, 10, 10);
+ }
+
+main {
+  width: 90%;
+  margin: 0 auto;
+  background-color: rgb(223, 215, 208);
 }
 
-main{
-    width: 90%;
-    margin: 0 auto;
-    background-color: rgb(223, 215, 208);
+body {
+  background-color: rgb(223, 215, 208);
 }
 
-body{
-    background-color: rgb(223, 215, 208);
+img {
+  max-width: 20vw;
+  width: auto;
+  border-radius: 10px;
+  margin: 20px;
 }
 
-img{
-    width: 20vw;
-    border-radius: 10px;
-    margin: 20px;   
-  
+img.landscape{
+    max-width: 30vw;
 }
 
-img:hover{
-    scale: 1.1;
+img:hover {
+  scale: 1.07;
 }
 
-.container{
-    width: 80vw;
-    justify-content: center;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    /* align-content: flex-start; */
-    
+.container {
+  width: 80vw;
+  justify-content: center;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+
+  /* align-content: flex-start; */
 }
 
-.container div{
-    width: 30%;
-    padding: 10px;
-    border-radius: 10px;
-    cursor: grab;
-    text-align: center;
-    border: 2px solid rgb(142, 92, 59);
-    margin: 10px;
-    
-   
-    /* justify-content: flex-start;
+
+.j {grid-area: j;}
+.bt {grid-area: bt}
+.p {grid-area: p;}
+.r {grid-area: r;}
+.wl {grid-area: wl;}
+.bd {grid-area: bd;}
+.ll {grid-area: ll;}
+.cb {grid-area: cb;}
+.hl {grid-area: hl;}
+
+
+.grid-container {
+  width: 80vw;
+  justify-content: center;
+  margin-top: 10px;
+  margin: 20px auto;
+  display: grid;
+  grid-template: 
+    'j j j bt bt p p'
+    'j j j bt bt p p'
+    'j j j bt bt p p'
+    'j j j cb cb bd bd'
+    'j j j cb cb bd bd'
+    'j j j cb cb bd bd'
+    'r r r cb cb bd bd'
+    'r r r wl wl hl hl'
+    'r r r wl wl hl hl'
+    'll ll ll wl wl hl hl'
+    'll ll ll wl wl hl hl'
+    'll ll ll wl wl hl hl'
+    'll ll ll wl wl hl hl';
+    grid-gap: 5px;}
+
+.container div {
+  width: 30%;
+  padding: 10px;
+  border-radius: 10px;
+  cursor: grab;
+  text-align: center;
+  margin: 10px;
+
+  /* justify-content: flex-start;
     align-content: flex-start; */
 }
 
-i{
-    color:  rgb(102, 10, 10);
-    /* padding-top: 20px; */
-    font-size: 40px;
-
+i {
+  color: rgb(102, 10, 10);
+  /* padding-top: 20px; */
+  font-size: 40px;
 }
 
-i:hover{
-    color: rgb(46, 7, 7);
+i:hover {
+  color: rgb(46, 7, 7);
 }
 
-nav{
-    width: 100%;
-    height: 15%;
+nav {
+  width: 100%;
+  height: 15%;
+  text-align: center;
+  background-color: rgb(223, 215, 208);
+}
+
+nav li {
+  display: inline-block;
+  padding: 10px 15px;
+  margin-left: 40px;
+  padding: 10px 15px;
+}
+
+nav li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: rgb(102, 10, 10);
+  font-family: "Aboreto", cursive;
+  font-weight: bolder;
+}
+
+nav li a:hover {
+  color: rgb(46, 7, 7);
+}
+
+p {
+  margin-bottom: 10px;
+  color: rgb(102, 10, 10);
+}
+
+.product-link{
+    text-decoration: none;
+}
+
+footer {
+  color: rgb(102, 10, 10);
+  width: 90%;
+  margin: 0 auto;
+  font-size: 20px;
+}
+
+footer a {
+  text-decoration: none;
+  color: rgb(102, 10, 10);
+}
+
+footer div {
+ 
+  height: 5vh;
+  margin: 20px auto 0 auto;
+  text-align: center;
+}
+
+.breadcrumbs * {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: rgb(102, 10, 10);
+  font-family: "Aboreto", cursive;
+  font-weight: bolder;
+}
+
+.breadcrumbs li {
+  list-style: none;
+  display: inline-block;
+}
+
+.img-john{
+  width: fit-content;
+  max-height: 700px;
+}
+
+.img-flexbox {
+  display: flex;
+  width: 66vw;
+  flex-wrap: wrap;
+}
+.img-flexbox:hover{
+    scale: 1.1;
+}
+
+.product-title {
+  font-family: "Lato", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #1f0202;
+}
+
+.outer-flexbox {
+  display: flex;
+}
+
+.details {
+  width: 30vw;
+}
+
+.product-dimensions {
+  font-family: "Lato", sans-serif;
+  font-size: 15px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+  margin-top: 5px;
+}
+.price {
+    margin-top: 10px;
+    font-family: "Lato", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+
+.Realization-and-delivery {
+  
+    margin-top: 20px;
+    font-family: "Lato", sans-serif;
+    font-size: 12px;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #4f4f4f;
+  }
+
+  .days{
+          font-family: "Lato", sans-serif;
+        font-size: 12px;
+        font-weight: 300;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        text-align: left;
+        color: #4f4f4f;
+        margin-left: 10px;
+      }
+ .delivery{
+    margin-top: 15px;
+ }
+span.fa-truck-moving{
+    font-size: 30px;
+   }
+
+.order{
+     margin-top: 60px; 
+     font-size: 20px;          
+      }
+
+
+.order input{
+    font-size: 15px;
+    width: 35px;
     text-align: center;
-    background-color: rgb(223, 215, 208);
-    
 }
 
-li{
-    display: inline-block;
-    padding: 10px 15px;
-    margin-left: 40px;
-    padding: 10px 15px;
-    
+.order button{
+    font-family: "Lato", sans-serif;
+        width: 206px;
+        height: 38px;
+         border-radius: 5px;
+        border: solid 1px #4f4f4f;
+        background-color: #9d6868;
+        font-size: 24px;
+        color: #4f4f4f;
+        cursor: pointer;
+        display: block;
+        margin-top: 15px;
 }
 
-li a{
-    text-decoration: none;
-    text-transform: uppercase;
-    color:  rgb(102, 10, 10);
-    font-family: 'Aboreto', cursive;
-    font-weight: bolder;
-     
+.order button:hover {
+    background-color: rgb(72, 43, 43);
+    color: antiquewhite;
+     }
+
+article p{
+    margin: 20px;
+    font-family: "Lato", sans-serif;
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #333;
+}
+.img-ringo{
+    max-width: fit-content;
+    max-height: 40vh;
+  
+}
+.img-corkbox{
+    margin-left: 100px;
 }
 
-li a:hover{
-    color: rgb(46, 7, 7);
-    }
-
-p{
-    margin-bottom: 10px;
-    color: rgb(102, 10, 10);
-    
-}
-.add{
-    padding: 15px 10px;
-    border: 3px solid rgb(142, 92, 59);
-    border-radius: 10px;
-    text-decoration: none;
-    color:  rgb(102, 10, 10);
-    text-transform: uppercase;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 100px;
-    margin: 0 auto;
-    /* font-size: 40px; */
-    /* width: 100px;
-    height: 100px; */
-}
-
-.add:hover{
-    color: rgb(46, 7, 7);
-}
-
-footer{
-    color:  rgb(102, 10, 10);
-    width: 90%;
-    margin: 0 auto;
-    font-size: 20px;
-}
-
-footer a{
-    text-decoration: none;
-    color:  rgb(102, 10, 10);
-}
-
-footer div{
-    width: 80%;
-    margin: 0 auto;   
+.img-bathtray2{
+  width: 700px;
+ 
 }
