--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h3 {
   text-align: center;
   font-family: "Aboreto", cursive;
   color: rgb(102, 10, 10);
- }
+}
 
 main {
   width: 90%;
@@ -49,8 +49,8 @@ img {
   margin: 20px;
 }
 
-img.landscape{
-    max-width: 30vw;
+img.landscape {
+  max-width: 30vw;
 }
 
 img:hover {
@@ -68,17 +68,33 @@ img:hover {
   /* align-content: flex-start; */
 }
 
-
-.j {grid-area: j;}
-.bt {grid-area: bt}
-.p {grid-area: p;}
-.r {grid-area: r;}
-.wl {grid-area: wl;}
-.bd {grid-area: bd;}
-.ll {grid-area: ll;}
-.cb {grid-area: cb;}
-.hl {grid-area: hl;}
-
+.j {
+  grid-area: j;
+}
+.bt {
+  grid-area: bt;
+}
+.p {
+  grid-area: p;
+}
+.r {
+  grid-area: r;
+}
+.wl {
+  grid-area: wl;
+}
+.bd {
+  grid-area: bd;
+}
+.ll {
+  grid-area: ll;
+}
+.cb {
+  grid-area: cb;
+}
+.hl {
+  grid-area: hl;
+}
 
 .grid-container {
   width: 80vw;
@@ -86,21 +102,22 @@ img:hover {
   margin-top: 10px;
   margin: 20px auto;
   display: grid;
-  grid-template: 
-    'j j j bt bt p p'
-    'j j j bt bt p p'
-    'j j j bt bt p p'
-    'j j j cb cb bd bd'
-    'j j j cb cb bd bd'
-    'j j j cb cb bd bd'
-    'r r r cb cb bd bd'
-    'r r r wl wl hl hl'
-    'r r r wl wl hl hl'
-    'll ll ll wl wl hl hl'
-    'll ll ll wl wl hl hl'
-    'll ll ll wl wl hl hl'
-    'll ll ll wl wl hl hl';
-    grid-gap: 5px;}
+  grid-template:
+    "j j j bt bt p p"
+    "j j j bt bt p p"
+    "j j j bt bt p p"
+    "j j j cb cb bd bd"
+    "j j j cb cb bd bd"
+    "j j j cb cb bd bd"
+    "r r r cb cb bd bd"
+    "r r r wl wl hl hl"
+    "r r r wl wl hl hl"
+    "ll ll ll wl wl hl hl"
+    "ll ll ll wl wl hl hl"
+    "ll ll ll wl wl hl hl"
+    "ll ll ll wl wl hl hl";
+  grid-gap: 5px;
+}
 
 .container div {
   width: 30%;
@@ -155,8 +172,8 @@ p {
   color: rgb(102, 10, 10);
 }
 
-.product-link{
-    text-decoration: none;
+.product-link {
+  text-decoration: none;
 }
 
 footer {
@@ -172,7 +189,6 @@ footer a {
 }
 
 footer div {
- 
   height: 5vh;
   margin: 20px auto 0 auto;
   text-align: center;
@@ -191,7 +207,7 @@ footer div {
   display: inline-block;
 }
 
-.img-john{
+.img-john {
   width: fit-content;
   max-height: 700px;
 }
@@ -201,8 +217,8 @@ footer div {
   width: 66vw;
   flex-wrap: wrap;
 }
-.img-flexbox:hover{
-    scale: 1.1;
+.img-flexbox:hover {
+  scale: 1.1;
 }
 
 .product-title {
@@ -238,8 +254,8 @@ footer div {
   margin-top: 5px;
 }
 .price {
-    margin-top: 10px;
-    font-family: "Lato", sans-serif;
+  margin-top: 10px;
+  font-family: "Lato", sans-serif;
   font-size: 20px;
   font-weight: bold;
   font-stretch: normal;
@@ -251,91 +267,87 @@ footer div {
 }
 
 .Realization-and-delivery {
-  
-    margin-top: 20px;
-    font-family: "Lato", sans-serif;
-    font-size: 12px;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: left;
-    color: #4f4f4f;
-  }
-
-  .days{
-          font-family: "Lato", sans-serif;
-        font-size: 12px;
-        font-weight: 300;
-        font-stretch: normal;
-        font-style: normal;
-        line-height: normal;
-        letter-spacing: normal;
-        text-align: left;
-        color: #4f4f4f;
-        margin-left: 10px;
-      }
- .delivery{
-    margin-top: 15px;
- }
-span.fa-truck-moving{
-    font-size: 30px;
-   }
-
-.order{
-     margin-top: 60px; 
-     font-size: 20px;          
-      }
-
-
-.order input{
-    font-size: 15px;
-    width: 35px;
-    text-align: center;
+  margin-top: 20px;
+  font-family: "Lato", sans-serif;
+  font-size: 12px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #4f4f4f;
 }
 
-.order button{
-    font-family: "Lato", sans-serif;
-        width: 206px;
-        height: 38px;
-         border-radius: 5px;
-        border: solid 1px #4f4f4f;
-        background-color: #9d6868;
-        font-size: 24px;
-        color: #4f4f4f;
-        cursor: pointer;
-        display: block;
-        margin-top: 15px;
+.days {
+  font-family: "Lato", sans-serif;
+  font-size: 12px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #4f4f4f;
+  margin-left: 10px;
+}
+.delivery {
+  margin-top: 15px;
+}
+span.fa-truck-moving {
+  font-size: 30px;
+}
+
+.order {
+  margin-top: 60px;
+  font-size: 20px;
+}
+
+.order input {
+  font-size: 15px;
+  width: 35px;
+  text-align: center;
+}
+
+.order button {
+  font-family: "Lato", sans-serif;
+  width: 206px;
+  height: 38px;
+  border-radius: 5px;
+  border: solid 1px #4f4f4f;
+  background-color: #9d6868;
+  font-size: 24px;
+  color: #4f4f4f;
+  cursor: pointer;
+  display: block;
+  margin-top: 15px;
 }
 
 .order button:hover {
-    background-color: rgb(72, 43, 43);
-    color: antiquewhite;
-     }
-
-article p{
-    margin: 20px;
-    font-family: "Lato", sans-serif;
-    font-size: 16px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: left;
-    color: #333;
-}
-.img-ringo{
-    max-width: fit-content;
-    max-height: 40vh;
-  
-}
-.img-corkbox{
-    margin-left: 100px;
+  background-color: rgb(72, 43, 43);
+  color: antiquewhite;
 }
 
-.img-bathtray2{
+article p {
+  margin: 20px;
+  font-family: "Lato", sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #333;
+}
+.img-ringo {
+  max-width: fit-content;
+  max-height: 40vh;
+}
+.img-corkbox {
+  margin-left: 100px;
+}
+
+.img-bathtray2 {
   width: 700px;
- 
 }
